Fixed z-index overlap issue with Material-UI Popper with z-index and giving Popper className

--- a/frontend/src/pages/Register/register.css
+++ b/frontend/src/pages/Register/register.css
@@ -95,6 +95,10 @@ form .button input {
   text-decoration: none;
 }
 
+.avatar-popper {
+  z-index: 100;
+}
+
 @media (max-width: 600px) {
   form .form-details .input-box {
     width: 100%;
